--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-bootstrap": "~0.14.3",
     "bootstrap": "~3.3.6",
     "angular-translate": "~2.8.1",
-    "angular-translate-loader-static-files": "~2.8.1"
+    "angular-translate-loader-static-files": "~2.8.1",
+    "animate.css": "~3.4.0"
   }
 }
