--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-translate": "~2.8.1",
     "angular-translate-loader-static-files": "~2.8.1",
     "animate.css": "~3.4.0",
-    "a0-angular-storage": "~0.0.13"
+    "a0-angular-storage": "~0.0.13",
+    "angular-resource": "~1.4.8"
   }
 }
