--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-translate-loader-static-files": "~2.8.1",
     "animate.css": "~3.4.0",
     "a0-angular-storage": "~0.0.13",
-    "angular-resource": "~1.4.8"
+    "angular-resource": "~1.4.8",
+    "oclazyload": "ocLazyLoad#~1.0.9"
   }
 }
