--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sequence": "^0.4.5",
